src/native/imgui_bridge.h

typedef struct WireDeckUiSnapshot {
    const char* active_profile;
    WireDeckUiChannel* channels;
    int channel_count;
    int channel_feed_kind;
    WireDeckUiBus* buses;
    int bus_count;
    WireDeckUiSend* sends;
    int send_count;
    WireDeckUiSource* sources;
    int source_count;
    WireDeckUiChannelSource* channel_sources;
    int channel_source_count;
    WireDeckUiDestination* destinations;
    int destination_count;
    int destination_feed_kind;
    WireDeckUiBusDestination* bus_destinations;
    int bus_destination_count;
    WireDeckUiChannelPlugin* channel_plugins;
    int channel_plugin_count;
    WireDeckUiChannelPluginParam* channel_plugin_params;
    int channel_plugin_param_count;
    WireDeckUiNoiseModel* noise_models;
    int noise_model_count;
    WireDeckUiPluginDescriptor* plugin_descriptors;
    int plugin_descriptor_count;
    WireDeckUiEvent* recent_events;
    int recent_event_count;
    int event_count;
    int request_add_input;
    int request_add_output;
    char request_select_source_id[256];
    char request_rename_input_id[256];
    char request_rename_input_label[256];
    char request_rename_output_id[256];
    char request_rename_output_label[256];
    char request_pick_input_icon_id[256];
    char request_clear_input_icon_id[256];
    char request_delete_input_id[256];
    char request_delete_output_id[256];
    char request_add_plugin_channel_id[256];
    char request_add_plugin_descriptor_id[256];
    char request_remove_plugin_id[256];
    char request_move_plugin_id[256];
    int request_move_plugin_delta;
    char request_open_plugin_ui_id[256];
    char request_select_noise_model_path[512];
} WireDeckUiSnapshot;
typedef struct WireDeckImGuiBridge WireDeckImGuiBridge;
WireDeckImGuiBridge* wiredeck_imgui_create(SDL_Window* window);
int wiredeck_imgui_render_frame(WireDeckImGuiBridge* bridge, WireDeckUiSnapshot* snapshot);
int wiredeck_imgui_pump_events(WireDeckImGuiBridge* bridge);
void wiredeck_imgui_set_tray_autostart_enabled(WireDeckImGuiBridge* bridge, int enabled);
int wiredeck_imgui_take_tray_autostart_request(WireDeckImGuiBridge* bridge, int* enabled);
int wiredeck_imgui_convert_icon_path(const char* source_path, char* out_path, size_t out_path_len);
void wiredeck_imgui_destroy(WireDeckImGuiBridge* bridge);
const char* wiredeck_imgui_last_error(void);